@@ -224,12 +224,12 @@ public class IdentificacaoService extends RaidesService {
 
     public static Function<Registration, String> COUNTRY_OF_HIGH_SCHOOL_PROVIDER = registration -> {
 
-        final PrecedentDegreeInformation pid = registration.getStudentCandidacy().getCompletedDegreeInformation();
+        final PrecedentDegreeInformation pid = registration.getCompletedDegreeInformation();
 
         if (pid != null && pid.getSchoolLevel() == SchoolLevelType.HIGH_SCHOOL_OR_EQUIVALENT && pid.getCountry() != null) {
             return pid.getCountry().getCode();
         }
-        
+
         if (registration.getPerson().getCountryHighSchool() != null) {
             return registration.getPerson().getCountryHighSchool().getCode();
         }
@@ -247,7 +247,7 @@ public class IdentificacaoService extends RaidesService {
         }
 
         return null;
-        
+
     };
 
     static public void setCountryOfHighSchoolProvider(final Function<Registration, String> provider) {
