@@ -1,3 +1,5 @@
+- Refactor: Move PrecedentDegreeInformation relations from the StudentCandidacy to Registration [#qubIT-Fenix-6617]
+
 2.24.11 (04-02-2025)
 - Bug fix: Apply rounding to RAIDES accumulated credits [#qubIT-Fenix-6596]
 
